--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </script>
   </head>
   <body>
+    <h1> My Device Information </h1>
     <p id="deviceProperties">Loading device properties...</p>
   </body>
 </html>
