--- a/index.html
+++ b/index.html
@@ -1,30 +1,47 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Device Properties Example</title>
+    <title>Accelerometer Example</title>
 
-    <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
+    <script type="text/javascript" charset="utf-8" src="phonegap.js"></script>
     <script type="text/javascript" charset="utf-8">
 
-    // Wait for device API libraries to load
-    //
+    var WatchID  = null;
+
     document.addEventListener("deviceready", onDeviceReady, false);
 
-    // device APIs are available
-    //
-    function onDeviceReady() {
-        var element = document.getElementById('deviceProperties');
-        element.innerHTML = 'Device Model: '    + device.model    + '<br />' +
-                            'Device Cordova: '  + device.cordova  + '<br />' +
-                            'Device Platform: ' + device.platform + '<br />' +
-                            'Device UUID: '     + device.uuid     + '<br />' +
-                            'Device Version: '  + device.version  + '<br />';
-    }
+        function onDeviceReady() {
+         startWatch();
+    
+	}
+
+    function startWatch(){
+     var options = {frequency: 3000};
+     WatchID = navigator.accelerometer.watchAcceleration(onSuccess,onError,options);
+       }
+
+	function stopWatch(){
+      if(WatchID){
+          navigator.accelerometer.clearWatch(watchID);
+          WatchID = null;
+	}
+	}
+
+	function onSuccess(acceleration){
+		var element = document.getElementById('accelerometer')
+ 		element.innerHTML = 'Acceleration X: '+ acceleration.x + '<br />'+
+				    'Acceleration Y: '+ acceleration.y + '<br />'+
+				    'Acceleration Z: '+ acceleration.z + '<br />'+
+				    'Timestamp:'      + acceleration.timestamp + '<br />';    
+	}
+	function onError(){
+		alert('Problem!')
+}
+
 
     </script>
   </head>
   <body>
-    <h1> My Device Information </h1>
-    <p id="deviceProperties">Loading device properties...</p>
+	<div id="accelerometer">Waiting for accelerometer...</div>    
   </body>
 </html>
