--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
 	function stopWatch(){
       if(WatchID){
-          navigator.accelerometer.clearWatch(watchID);
+          navigator.accelerometer.clearWatch(WatchID);
           WatchID = null;
 	}
 	}
